--- a/app/src/main/res/layout/activity_change_job_details.xml
+++ b/app/src/main/res/layout/activity_change_job_details.xml
@@ -4,6 +4,232 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ManageJobPositions.ChangeJobDetails.ChangeJobDetailsActivity">
+    tools:context=".view.ManageJobPositions.AddNewJob.AddNewJobActivity">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editTextChangeJobDetailsTitle"
+                android:layout_width="238dp"
+                android:layout_height="71dp"
+                android:layout_marginTop="24dp"
+                android:ems="10"
+                android:hint="Job's Title"
+                android:inputType="text"
+                app:layout_constraintStart_toStartOf="@+id/textView17"
+                app:layout_constraintTop_toBottomOf="@+id/textView19" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="213dp"
+                android:layout_height="27dp"
+                android:layout_marginTop="60dp"
+                android:text="Please enter the following:"
+                android:textSize="16sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/textView15"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="372dp"
+                android:layout_height="55dp"
+                android:layout_marginTop="16dp"
+                android:text="Add a new Job"
+                android:textAlignment="center"
+                android:textSize="38sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.407"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editTextChangeJobDetailsDescription"
+                android:layout_width="367dp"
+                android:layout_height="82dp"
+                android:layout_marginTop="28dp"
+                android:ems="10"
+                android:hint="Job's Description"
+                android:inputType="text"
+                app:layout_constraintStart_toStartOf="@+id/editTextChangeJobDetailsTitle"
+                app:layout_constraintTop_toBottomOf="@+id/editTextChangeJobDetailsTitle" />
+
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="264dp"
+                android:layout_height="57dp"
+                android:layout_marginTop="44dp"
+                android:text="Job Details"
+                android:textAlignment="center"
+                android:textSize="48sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView15"
+                app:layout_constraintHorizontal_bias="0.527"
+                app:layout_constraintStart_toStartOf="@+id/textView15"
+                app:layout_constraintTop_toBottomOf="@+id/textView17" />
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="328dp"
+                android:layout_height="116dp"
+                android:layout_marginTop="44dp"
+                android:text="Job Requirements"
+                android:textAlignment="center"
+                android:textSize="48sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView15"
+                app:layout_constraintHorizontal_bias="0.568"
+                app:layout_constraintStart_toStartOf="@+id/textView15"
+                app:layout_constraintTop_toBottomOf="@+id/spinnerChangeJobDetailsAvailability" />
+
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="124dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="108dp"
+                android:text="Education:"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/editTextChangeJobDetailsDescription"
+                app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewChangeJobDetailsReqEducation"
+                android:layout_width="373dp"
+                android:layout_height="262dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/textView21"
+                app:layout_constraintTop_toBottomOf="@+id/textView21" />
+
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="189dp"
+                android:layout_height="38dp"
+                android:layout_marginTop="48dp"
+                android:text="Work Experience:"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/recyclerViewChangeJobDetailsReqEducation"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewChangeJobDetailsReqEducation" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewChangeJobDetailsReqWorkExperience"
+                android:layout_width="367dp"
+                android:layout_height="271dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="@+id/textView22"
+                app:layout_constraintTop_toBottomOf="@+id/textView22" />
+
+            <TextView
+                android:id="@+id/textView27"
+                android:layout_width="247dp"
+                android:layout_height="41dp"
+                android:layout_marginTop="88dp"
+                android:text="Language Knowledge:"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="@+id/recyclerViewChangeJobDetailsReqWorkExperience"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewChangeJobDetailsReqWorkExperience" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewChangeJobDetailsReqLanguageKnowledge"
+                android:layout_width="363dp"
+                android:layout_height="266dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="@+id/textView27"
+                app:layout_constraintTop_toBottomOf="@+id/textView27" />
+
+            <Button
+                android:id="@+id/btnChangeJobDetailsSave"
+                android:layout_width="195dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="44dp"
+                android:text="Save Job"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.931"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewChangeJobDetailsReqLanguageKnowledge" />
+
+            <Button
+                android:id="@+id/btnChangeJobDetailsEditEducation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="152dp"
+                android:layout_marginBottom="16dp"
+                android:text="Edit"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerViewChangeJobDetailsReqEducation"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/textView21" />
+
+            <Button
+                android:id="@+id/btnChangeJobDetailsEditWorkExp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="Edit"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerViewChangeJobDetailsReqWorkExperience"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.73"
+                app:layout_constraintStart_toEndOf="@+id/textView22" />
+
+            <Button
+                android:id="@+id/btnChangeJobDetailsEditLangKnow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="26dp"
+                android:layout_marginBottom="8dp"
+                android:text="Edit"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerViewChangeJobDetailsReqLanguageKnowledge"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/textView27" />
+
+            <Button
+                android:id="@+id/btnChangeJobDetailsDelete"
+                android:layout_width="168dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="56dp"
+                android:text="Delete Job"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewChangeJobDetailsReqLanguageKnowledge" />
+
+            <Spinner
+                android:id="@+id/spinnerChangeJobDetailsAvailability"
+                android:layout_width="275dp"
+                android:layout_height="58dp"
+                android:layout_marginTop="56dp"
+                app:layout_constraintStart_toStartOf="@+id/editTextChangeJobDetailsDescription"
+                app:layout_constraintTop_toBottomOf="@+id/editTextChangeJobDetailsDescription" />
+
+            <TextView
+                android:id="@+id/textView33"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="Select Availability"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toTopOf="@+id/spinnerChangeJobDetailsAvailability"
+                app:layout_constraintStart_toStartOf="@+id/spinnerChangeJobDetailsAvailability" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
