--- a/app/src/main/res/layout/activity_change_req_education_details.xml
+++ b/app/src/main/res/layout/activity_change_req_education_details.xml
@@ -11,12 +11,12 @@
         android:id="@+id/textView433"
         android:layout_width="342dp"
         android:layout_height="81dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:text="Education Details"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -100,4 +100,17 @@
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <Button
+        android:id="@+id/backbuttonChangeReqEducationDatails"
+        android:layout_width="111dp"
+        android:layout_height="53dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView433"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
