--- a/app/src/main/res/layout/recycler_view_application_row.xml
+++ b/app/src/main/res/layout/recycler_view_application_row.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="407dp"
-        android:layout_height="214dp"
+        android:layout_width="410dp"
+        android:layout_height="282dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
@@ -21,51 +21,93 @@
 
             <TextView
                 android:id="@+id/recyclerViewapplicationStatus"
-                android:layout_width="84dp"
-                android:layout_height="30dp"
-                android:text="Status"
+                android:layout_width="64dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="28dp"
+                android:layout_marginEnd="20dp"
+                android:text="Status:"
+                android:textAlignment="textEnd"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.848"
-                app:layout_constraintStart_toEndOf="@+id/EmployeeApplicationinfo"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.586" />
+                app:layout_constraintEnd_toStartOf="@+id/textView60"
+                app:layout_constraintTop_toBottomOf="@+id/Coverageletterapplication" />
 
             <TextView
                 android:id="@+id/EmployeeApplicationinfo"
-                android:layout_width="224dp"
-                android:layout_height="22dp"
-                android:text="Employee_name"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.191"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.333" />
+                android:layout_width="261dp"
+                android:layout_height="39dp"
+                android:layout_marginTop="16dp"
+                android:text="Job Title"
+                app:layout_constraintEnd_toEndOf="@+id/textView59"
+                app:layout_constraintTop_toBottomOf="@+id/textView45" />
 
             <TextView
                 android:id="@+id/Coverageletterapplication"
-                android:layout_width="223dp"
-                android:layout_height="74dp"
-                android:layout_marginTop="36dp"
+                android:layout_width="383dp"
+                android:layout_height="85dp"
+                android:layout_marginTop="32dp"
                 android:text="Coverage Letter"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.19"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/EmployeeApplicationinfo"
                 app:layout_constraintTop_toBottomOf="@+id/EmployeeApplicationinfo" />
 
             <TextView
                 android:id="@+id/textView45"
-                android:layout_width="176dp"
-                android:layout_height="37dp"
-                android:text="Application"
-                android:textAlignment="center"
-                android:textSize="20sp"
+                android:layout_width="37dp"
+                android:layout_height="26dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="16dp"
+                android:text="ID: "
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                tools:layout_editor_absoluteX="115dp"
-                tools:layout_editor_absoluteY="7dp" />
+                app:layout_constraintEnd_toStartOf="@+id/textView59"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView59"
+                android:layout_width="71dp"
+                android:layout_height="28dp"
+                android:layout_marginEnd="16dp"
+                android:text="Applic ID"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView45" />
+
+            <TextView
+                android:id="@+id/textView60"
+                android:layout_width="114dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="28dp"
+                android:text="Applic Status"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/Coverageletterapplication"
+                app:layout_constraintTop_toBottomOf="@+id/Coverageletterapplication" />
+
+            <TextView
+                android:id="@+id/textView62"
+                android:layout_width="91dp"
+                android:layout_height="17dp"
+                android:layout_marginEnd="24dp"
+                android:text="Job's Title:"
+                android:textAlignment="textEnd"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/EmployeeApplicationinfo"
+                app:layout_constraintEnd_toStartOf="@+id/EmployeeApplicationinfo"
+                app:layout_constraintTop_toTopOf="@+id/EmployeeApplicationinfo"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/textView63"
+                android:layout_width="107dp"
+                android:layout_height="27dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="284dp"
+                android:text="Cover Letter:"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/EmployeeApplicationinfo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView62" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
